--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a>
                     <ul>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="animation.html">Animation</a></li>
-                        <li><a href="#">Nothing</a></li>
+                        <li><a href="#">Design</a></li>
+                        <li><a href="#">Development</a></li>
+                        <li><a href="#">Content</a></li>
                     </ul>
                 </li>
                 <li><a href="#skills">Skills</a></li>
@@ -55,15 +55,8 @@
             <div class="container">
                 <h2>About me</h2>
                 <!-- <div class="portrait"><img src="img/profile-pic1.jpg" alt="portrait"></div> -->
-                <p>Hello people! I'm versatile, reliable and focused on results with calm, common-sense approach to business challenges. I've gained a lot of valuable international experience by living and working in five different countries (Finland, Canada, New Zealand, Iceland and the Czech Republic) and have several years of experience from project management, business development, content marketing and customer service positions from all over the world. I'm currently studying in Helsinki Business College to become a competent Full Stack Developer with a focus on React & Node. </p>
-                <div class="social-media">
-                    <i class="fab fa-linkedin fa-3x"></i>
-                    <i class="fab fa-twitter-square fa-3x"></i>
-                    <i class="fab fa-github-square fa-3x"></i>
-                    <i class="fab fa-instagram-square fa-3x"></i>
-<!-- codewars https://www.codewars.com/users/Kale%20Kemosabe -->
-                    <i class="fas fa-window-close fa-3x"></i>
-                </div>
+                <p>Hello people! I'm versatile, reliable and focused on results with calm, common-sense approach to business challenges. I've gained a lot of valuable international experience by living and working in five different countries (Finland, Canada, New Zealand, Iceland and the Czech Republic) and have several years of experience from project management, business development, content marketing and customer service positions from all over the world. I'm currently studying in Helsinki Business College to become a competent Full Stack Developer with a focus on React & Node.</p>
+                <button class="btn">Download CV</button>
             </div>
         </section>
 
@@ -76,22 +69,22 @@
                 <h2>Services</h2>
                 <div class="cards">
                     <div class="card">
-                        <img src="img/science.png" alt="development">
-                        <h3>Gallery</h3>
-                        <p>Natus quo rerum omnis nobis consectetur sapiente mollitia voluptatem! Repellendus.</p>
-                        <a href="gallery.html">See more</a>
+                        <img src="img/design-tools.jpg" alt="development">
+                        <h3>Design</h3>
+                        <p>In the past, I was mainly creating materials for event marketing campaigns. In recent years, I've been focusing mainly on web design.</p>
+                        <a href="#">See more</a>
                     </div>
                     <div class="card">
-                        <img src="img/design-tools.jpg" alt="design">
-                        <h3>Animation</h3>
-                        <p>Natus quo rerum omnis nobis consectetur sapiente mollitia voluptatem! Repellendus.</p>
-                        <a href="animation.html">See more</a>
+                        <img src="img/science.png" alt="design">
+                        <h3>Development</h3>
+                        <p>I have a very customer-focused approach to web development and I understand the importance of good UI/UX design.</p>
+                        <a href="#">See more</a>
                     </div>
                     <div class="card">
                         <img src="img/alchemy.gif" alt="content">
-                        <h3>Nothing yet...</h3>
-                        <p>Natus quo rerum omnis nobis consectetur sapiente mollitia voluptatem! Repellendus.</p>
-                        <a href="#">Coming soon</a>
+                        <h3>Content</h3>
+                        <p>I've produced content and written articles mainly for events and tourism industry. Both print and digital. I'm also a keen photographer.</p>
+                        <a href="#">See more</a>
                     </div>
                 </div>
             </div>
@@ -105,7 +98,7 @@
                 <div class="progress-bars">
     <!-- dev skills -->
                     <div class="development">
-                        <h4>Coding</h4>
+                        <h4>Development</h4>
                         <div class="skill">
                             <h5>HTML</h5>
                             <div class="progress">
@@ -113,15 +106,19 @@
                             </div>
                             <h5>CSS</h5>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                             <h5>JavaScript</h5>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                             <h5>React</h5>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <h5>Node & Express</h5>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                     </div>
@@ -137,9 +134,13 @@
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                            <h5>Figma and XD</h5>
+                            <h5>Xd</h5>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <h5>Figma</h5>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                             <h5>Illustrator</h5>
                             <div class="progress">
@@ -179,9 +180,16 @@
                 </article>
             </div>
         </section>
-
+        <section id="contact-links">
+            <div class="container">
+                <div class="social-media">
+                    <a id="linkedin" href="http://www.linkedin.com/in/kalle-kekomaki"><i class="fab fa-linkedin fa-3x"></i></a>
+                    <a id="github" href="https://github.com/KaleKemosabe"><i class="fab fa-github-square fa-3x"></i></a>
+                    <a id="codewars" href="https://www.codewars.com/users/Kale%20Kemosabe"><i class="fas fa-window-close fa-3x"></i></a>
+                </div>
+            </div>
+        </section>
     </main>
-
     <footer>
         <div class="container">
             <div class="contact-box" id="contact">
