prepared for adding extra sections

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a>
-                    <ul>
+                    <!-- <ul>
                         <li><a href="#">Design</a></li>
                         <li><a href="#">Development</a></li>
                         <li><a href="#">Content</a></li>
-                    </ul>
+                    </ul> -->
                 </li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -41,55 +41,50 @@
             </ul>
         </nav>
     </header>
-
+<!-- hero section -->
     <main>
         <section id="hero">
             <div class="content">
                 <h1>Welcome to my portfolio website!</h1>
                 <h2 class="hero">I'm a Web Designer & Developer based in Helsinki, Finland</h2>
-                <!-- <button type="button" class="btn"><a href="#contact">Say Hello</a></button> -->
             </div>
         </section>
-
+<!-- about me section -->
         <section id="about">
             <div class="container">
                 <h2>About me</h2>
-                <!-- <div class="portrait"><img src="img/profile-pic1.jpg" alt="portrait"></div> -->
                 <p>Hello people! I'm versatile, reliable and focused on results with calm, common-sense approach to business challenges. I've gained a lot of valuable international experience by living and working in five different countries (Finland, Canada, New Zealand, Iceland and the Czech Republic) and have several years of experience from project management, business development, content marketing and customer service positions from all over the world. I'm currently studying in Helsinki Business College to become a competent Full Stack Developer with a focus on React & Node.</p>
-                <button class="btn">Download CV</button>
+                <a class="btn" href="assets/kalle-kekomaki-cv2020.pdf" title="" download>Download CV</a>
             </div>
         </section>
-
 <!-- back to top button -->
         <a href="#" class="to-top"><i class="fas fa-chevron-circle-up fa-4x"></i></a>
-
 <!-- services section cards -->
         <section id="services">
             <div class="container">
                 <h2>Services</h2>
                 <div class="cards">
                     <div class="card">
-                        <img src="img/design-tools.jpg" alt="development">
+                        <img src="img/design-tools.jpg" alt="design">
                         <h3>Design</h3>
                         <p>In the past, I was mainly creating materials for event marketing campaigns. In recent years, I've been focusing mainly on web design.</p>
-                        <a href="#">See more</a>
+                        <a href="#">See more <i>(Coming soon...)</i></a>
                     </div>
                     <div class="card">
-                        <img src="img/science.png" alt="design">
+                        <img src="img/science.png" alt="development">
                         <h3>Development</h3>
                         <p>I have a very customer-focused approach to web development and I understand the importance of good UI/UX design.</p>
-                        <a href="#">See more</a>
+                        <a href="#">See more <i>(Coming soon...)</i></a>
                     </div>
                     <div class="card">
                         <img src="img/alchemy.gif" alt="content">
                         <h3>Content</h3>
                         <p>I've produced content and written articles mainly for events and tourism industry. Both print and digital. I'm also a keen photographer.</p>
-                        <a href="#">See more</a>
+                        <a href="#">See more <i>(Coming soon...)</i></a>
                     </div>
                 </div>
             </div>
         </section>
-
 <!-- skills section -->
         <section id="skills">
             <div class="container">
@@ -151,7 +146,6 @@
                 </div>
             </div>
         </section>
-
 <!-- projects slider -->
         <section id="projects">
             <div class="container">
@@ -180,16 +174,8 @@
                 </article>
             </div>
         </section>
-        <section id="contact-links">
-            <div class="container">
-                <div class="social-media">
-                    <a id="linkedin" href="http://www.linkedin.com/in/kalle-kekomaki"><i class="fab fa-linkedin fa-3x"></i></a>
-                    <a id="github" href="https://github.com/KaleKemosabe"><i class="fab fa-github-square fa-3x"></i></a>
-                    <a id="codewars" href="https://www.codewars.com/users/Kale%20Kemosabe"><i class="fas fa-window-close fa-3x"></i></a>
-                </div>
-            </div>
-        </section>
     </main>
+<!-- contact form and social media -->
     <footer>
         <div class="container">
             <div class="contact-box" id="contact">
@@ -211,6 +197,15 @@
                 </div>
             </div>
         </div>
+        <section id="contact-links">
+            <div class="container">
+                <div class="social-media">
+                    <a id="linkedin" href="http://www.linkedin.com/in/kalle-kekomaki"><i class="fab fa-linkedin fa-4x"></i></a>
+                    <a id="github" href="https://github.com/KaleKemosabe"><i class="fab fa-github-square fa-4x"></i></a>
+                    <a id="codewars" href="https://www.codewars.com/users/Kale%20Kemosabe"><i class="fas fa-window-close fa-4x"></i></a>
+                </div>
+            </div>
+        </section>
         <p class="copyright">Copyright &copy; Kalle Kekomaki 2020</p>
     </footer>
     <script src="script.js"></script>
