projects added to slider

--- a/index.html
+++ b/index.html
@@ -150,18 +150,15 @@
         <section id="projects">
             <div class="container">
             <h2>Projects</h2>
-            <h5>Use arrow keys below to browse through some of the selected projects</h5>
-                <div class="title">
-                <div class="underline"></div>
-                </div>        
+            <h5>These are some of the projects I've been working on lately. Source code for the projects available in <a href="https://github.com/KaleKemosabe?tab=repositories" target="_blank">Github</a></h5>
     <!-- project preview image and details -->
                 <article class="preview">
                 <div class="img-container">
                     <img src="img/contact-me.png" id="project-img" alt="project example image">
                 </div>
-                <h4 id="name">Random app</h4>
-                <p id="details">details</p>
+                <h3 id="name">Random app</h3>
                 <p id="info">info text</p>
+                <!-- <p id="details">Details</p> -->
     <!-- prev next buttons-->
                 <div class="button-container">
                     <button class="prev-btn">
