portfolio projects added and css fixed

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section id="about">
             <div class="container">
                 <h2>About me</h2>
-                <p>Hello people! I'm versatile, reliable and focused on results with calm, common-sense approach to business challenges. I've gained a lot of valuable international experience by living and working in five different countries (Finland, Canada, New Zealand, Iceland and the Czech Republic) and have several years of experience from project management, business development, content marketing and customer service positions from all over the world. I'm currently studying in Helsinki Business College to become a competent Full Stack Developer with a focus on React & Node.</p>
+                <p>Hello people! I'm versatile, reliable and focused on results with calm, common-sense approach to business challenges. I've gained a lot of valuable international experience by living and working in five different countries (Finland, Canada, New Zealand, Iceland and the Czech Republic) and have several years of experience from project management, business development, content marketing and customer service positions from all over the world. I'm currently studying in Helsinki Business College to become a competent Full Stack Developer with a focus on React & Node. Tools and technologies I'm familiar with include HTML, CSS, Sass, Bootstrap, JavaScript, TypeScript, React & Redux, Node & Express, Adobe Photoshop, InDesign, Illustrator, Xd, Animate, Figma, Pipedrive, Trello, Miro</p>
                 <a class="btn" href="assets/kalle-kekomaki-cv2020.pdf" title="" download>Download CV</a>
             </div>
         </section>
@@ -177,7 +177,7 @@
         <div class="container">
             <div class="contact-box" id="contact">
                 <div class="left">
-                    <img src="img/contact-me.png" alt="contact me">
+                    <img src="img/kalle-profile.jpg" alt="contact me">
                 </div>
     <!-- right side form -->
                 <div class="right">
