--- a/gallery.html
+++ b/gallery.html
@@ -36,69 +36,48 @@
     </header>
 
     <main>
-        <section id="photos">
-            <div class="container">
-
-                <div class="gallery">
-                    <div class="img">
-                        <img src="img/alchemy.gif" alt="random photo">
+<!-- parallax story -->
+        <section id="scroll-section">
+            <div class="about">
+                <div class="about-title">
+                    <h1>Design work</h1>
+                    <p>I created a bunch of event concepts/designs during the 3+ years that I was working as a Project Director in a company organizing B2B events. I created all kinds of marketing materials from flyers and banners to event programs by using Adobe Creative Cloud. </p>
+                </div>
+                <div class="about-pages">
+                    <div class="vertical">
+                        <img src="img/design/ils-pysty.jpg" alt="event banner design" />
                     </div>
-                    <div class="img">
-                        <img src="img/design-tools.jpg" alt="random photo">
+                    <div class="boxy">
+                        <img src="img/design/tunnel-pysty.jpg" alt="event banner design" />
                     </div>
-                    <div class="img">
-                        <img src="img/alchemy.gif" alt="random photo">
+                    <div class="boxy">
+                        <img src="img/design/construction-pysty.jpg" alt="event banner design" />
                     </div>
-                    <div class="img">
-                        <img src="img/design-tools.jpg" alt="random photo">
+                    <div class="boxy">
+                        <img src="img/design/e-air-pysty.jpg" alt="event banner design" />
                     </div>
-                    <div class="img">
-                        <img src="img/alchemy.gif" alt="random photo">
-                    </div>
-                    <div class="img">
-                        <img src="img/design-tools.jpg" alt="random photo">
-                    </div>
-                    <div class="img">
-                        <img src="img/alchemy.gif" alt="random photo">
-                    </div>
-                    <div class="img">
-                        <img src="img/design-tools.jpg" alt="random photo">
-                    </div>
-                    <div class="img">
-                        <img src="img/alchemy.gif" alt="random photo">
+                    <div class="boxy">
+                        <img src="img/design/car.jpg" alt="event banner design" />
                     </div>
                 </div>
-
-
             </div>
         </section>
+
+        <section id="full-concepts">
+            <h2>Full design concepts</h2>
+            <img src="img/design/ils-full-concept.jpg" alt="full event concept">
+        </section>
+
     </main>
 
     <footer>
-        <div class="container">
-            <div class="contact-box" id="contact">
-                <div class="left">
-                    <img src="img/contact-me.png" alt="contact me">
-                </div>
-                <div class="right">
-                    <h2>Contact me</h2>
-                    <h5>Name</h5>
-                    <input type="text" class="field" placeholder="your name">
-                    <h5>Email</h5>
-                    <input type="email" class="field" placeholder="your email">
-                    <h5>Phone</h5>
-                    <input type="text" class="field" placeholder="your phone number">
-                    <h5>Message</h5>
-                    <textarea class="field area" placeholder="tell me a secret"></textarea>
-                    <button class="btn">Submit</button>
-                </div>
-            </div>
-        </div>
-
-
         <p class="copyright">Copyright &copy; Kalle Kekomaki 2020</p>
     </footer>
 
-    <script src="script.js"></script>
+<!-- scrollmagic -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.min.js" integrity="sha512-RvUydNGlqYJapy0t4AH8hDv/It+zKsv4wOQGb+iOnEfa6NnF2fzjXgRy+FDjSpMfC3sjokNUzsfYZaZ8QAwIxg==" crossorigin="anonymous"></script>
+<!-- scrollmagic end -->
+    <script src="gallery.js"></script>
 </body>
 </html>
