--- a/gallery.html
+++ b/gallery.html
@@ -22,14 +22,15 @@
             <ul>
                 <li><a href="index.html#about">About</a></li>
                 <li><a href="index.html#services">Services</a>
-                    <ul>
+                    <!-- <ul>
                         <li><a href="gallery.html">Gallery</a></li>
                         <li><a href="animation.html">Animation</a></li>
                         <li><a href="gallery.html">Nothing</a></li>
-                    </ul>
+                    </ul> -->
                 </li>
-                <li><a href="index.html#skills">Skills</a></li>
-                <li><a href="index.html#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#timeline">Experience</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -61,6 +62,16 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section id="horizontal-banners">
+            <img src="img/design/glass-vaaka.jpg" alt="horizontal banner">
+            <img src="img/design/digico-vaaka.JPG" alt="horizontal banner">
+            <img src="img/design/ils2-vaaka.JPG" alt="horizontal banner">
+            <img src="img/design/sport-vaaka.JPG" alt="horizontal banner">
+            <img src="img/design/avsec-vaaka.jpg" alt="horizontal banner">
+            <img src="img/design/blockchain-vaaka.JPG" alt="horizontal banner">
+            <img src="img/design/plastics-vaaka.JPG" alt="horizontal banner">
         </section>
 
         <section id="full-concepts">
