--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     </ul> -->
                 </li>
                 <li><a href="#skills">Skills</a></li>
+                <li><a href="#timeline">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -153,6 +154,61 @@
                 </div>
             </div>
         </section>
+
+<!-- experience timeline -->
+        <div class="container">
+            <h2 class="timeline-title">Work Experience</h2>
+            <h4>Full details in <a class="timeline-link" href="https://www.linkedin.com/in/kalle-kekomaki">LinkedIn</a></h4>
+        </div>
+        <section id="timeline">
+            <ul>
+                <li>
+                    <div class="timeline-content">
+                        <h3>Freelancer & Student</h3>
+                        <p><b>Freelance | Nov 2019 - Present</b></p>
+                        <p>Between November 2019 and June 2020, I was part of a CMS implementation project where I concentrated on creating a better online presence for a customer. By the end of 2020 I had finished my MBA in Digital Solutions and started studying Full Stack Web Development focusing on React & Node.</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="timeline-content">
+                        <h3>SaaS Project Manager</h3>
+                        <p><b>WheelQ, Helsinki | Jun 2019 - Nov 2019</b></p>
+                        <p>As a project manager in a customer success team, my goal was to create value to B2B customers by helping them collect and utilize customer experience data and make the most of our SaaS solutions. In this role, I was managing customer projects, ensuring smooth and efficient onboardings/expansions and participating in internal process development.</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="timeline-content">
+                        <h3>Project Manager, Business Development Services</h3>
+                        <p><b>City of Vantaa | Jan 2019 - Jun 2019</b></p>
+                        <p>I managed Vantaa's part of an EU-funded Smart Station -project and co-developed selected stations together with different municipalities and service providers. I was also doing market research and meeting startups to get familiar with their business models and preparing content for marketing campaigns.</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="timeline-content">
+                        <h3>Project Director, Content Production</h3>
+                        <p><b>Luxatia International, Prague | Oct 2015 - Dec 2018</b></p>
+                        <p>I was conducting market research and coming up with new ideas for B2B events while deepening industry knowledge and establishing/maintaining relationships with industry leaders. I negotiated terms with speakers, sponsors and media partners, and created content for marketing campaigns. I attended and oversaw conferences and led events teams through the whole project lifecycle (project teams in the office, external service providers during events). Events included e.g. Annual Design Thinking and Service Design Summits.</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="timeline-content">
+                        <h3>CRM Advisor, Air France KLM Group</h3>
+                        <p><b>Bluelink International, Prague | Jan 2014 - Aug 2015</b></p>
+                        <p>I handled passenger claims in luggage department (for Air France, KLM and Delta Air Lines) and evaluated compensation claims + paid out refunds according to tight regulations set in Montreal and Warsaw Conventions. I was also part of a small group for remote mentoring and training of new employees in Mauritius.</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="timeline-content">
+                        <h3>Graphic Designer</h3>
+                        <p><b>Finnish Defence Forces, Parola | Oct 2005 - April 2006</b></p>
+                        <p>I worked at operative IT department during most of my military service and took care of visual design, photography and videography. I also did some simple website updates, so I'd like to think about this as the starting point for my career as a developer (even though a few years passed in between this and my career transition <i class="far fa-smile-wink"></i>)</p>
+                    </div>
+                </li>
+                <div style="clear:both;"></div>
+            </ul>
+        </section>
+
+
 <!-- projects slider -->
         <section id="projects">
             <div class="container">
