--- a/animation.html
+++ b/animation.html
@@ -28,8 +28,9 @@
                         <li><a href="gallery.html">Nothing</a></li>
                     </ul>
                 </li>
-                <li><a href="index.html#skills">Skills</a></li>
-                <li><a href="index.html#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#timeline">Experience</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
