--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
                 <h2 class="hero">I'm a Web Designer & Frontend Developer from Helsinki, Finland.</h2>
             </div>
             <div class="container hero-container">
-                <p class="about-text">Welcome to my portfolio website! I'm currently studying in Helsinki Business College to become a competent Full-stack Developer with a focus on React & Node. Before I got into coding, I was living around the world and working mostly in different project management and customer service positions. 
-                    <!-- Tools and technologies I'm familiar with include HTML, CSS, Sass, Bootstrap, JavaScript, TypeScript, React & Redux, Node & Express, Adobe Photoshop, InDesign, Illustrator, Xd, Animate, Figma, Pipedrive, Trello, Miro -->
+                <p class="about-text">Welcome to my portfolio website! I'm currently studying in Helsinki Business College to become a Full-stack Developer with focus on React & Node. Before I got into coding, I was living around the world and working mostly in different project management and customer service positions.
                 </p>
                 <p class="cv-text">If you want to keep your visit brief, here's my resume:</p>
                 <a class="btn" href="assets/kalle-kekomaki-cv2020.pdf" title="" download>Download CV</a>
@@ -61,8 +60,7 @@
         <!-- <section id="about">
             <div class="container">
                 <h2>About me</h2>
-                <p>Welcome to my portfolio website! I'm currently studying in Helsinki Business College to become a competent Full-stack Developer with a focus on React & Node. Before I got into coding, I was living around the world and working mostly in different project management and customer service positions. Tools and technologies I'm familiar with include HTML, CSS, Sass, Bootstrap, JavaScript, TypeScript, React & Redux, Node & Express, Adobe Photoshop, InDesign, Illustrator, Xd, Animate, Figma, Pipedrive, Trello, Miro</p>
-                <a class="btn" href="assets/kalle-kekomaki-cv2020.pdf" title="" download>Download CV</a>
+                <p>Occasionally, I wear a mustache. When I write code, I wear glasses.</p><p>Long story short: I'm a developer. designer, project manager. nature lover. annoyingly sarcastic individual. Tools and technologies I'm familiar with include HTML, CSS, Sass, Bootstrap, JavaScript, TypeScript, React & Redux, Node & Express, Adobe Photoshop, InDesign, Illustrator, Xd, Animate, Figma, Pipedrive, Trello, Miro</p>
             </div>
         </section> -->
 <!-- back to top button -->
@@ -72,23 +70,17 @@
             <div class="container">
                 <h2>Services</h2>
                 <div class="cards">
-                    <div class="card">
-                        <img src="img/design-tools.jpg" alt="design">
+                    <div class="card" data-tilt>
+                        <img class="card-icon" src="img/mustache.png" alt="design">
                         <h3>Design</h3>
-                        <p>In the past, I was mainly creating materials for event marketing campaigns. In recent years, I've been focusing mainly on web design.</p>
-                        <a href="#">Learn more <i>(Coming soon...)</i></a>
+                        <p>In the past, I was mainly creating materials for event marketing campaigns. Lately, I've been focusing mainly on web design.</p>
+                        <a href="gallery.html">Learn more</a>
                     </div>
-                    <div class="card">
-                        <img src="img/science.png" alt="development">
+                    <div class="card" data-tilt>
+                        <img class="card-icon" src="img/glasses.png" alt="development">
                         <h3>Development</h3>
                         <p>I have a very customer-focused approach to web development and I understand the importance of good UI/UX design.</p>
                         <a href="#">Learn more <i>(Coming soon...)</i></a>
-                    </div>
-                    <div class="card">
-                        <img src="img/alchemy.gif" alt="content">
-                        <h3>Content</h3>
-                        <p>I've produced content and written articles mainly for events and tourism industry. Both print and digital. I'm also a keen photographer.</p>
-                        <a href="gallery.html">Learn more</a>
                     </div>
                 </div>
             </div>
@@ -271,5 +263,7 @@
         <p class="copyright">Copyright &copy; Kalle Kekomaki 2020</p>
     </footer>
     <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="tilt.js"></script>
 </body>
 </html>
