--- a/gallery.html
+++ b/gallery.html
@@ -21,16 +21,10 @@
             <a onclick="mobileMenu()" href="#" class="icon"><i class="fas fa-bars fa-2x"></i></a>
             <ul>
                 <li><a href="index.html#about">About</a></li>
-                <li><a href="index.html#services">Services</a>
-                    <!-- <ul>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="animation.html">Animation</a></li>
-                        <li><a href="gallery.html">Nothing</a></li>
-                    </ul> -->
-                </li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#timeline">Experience</a></li>
-                <li><a href="#projects">Projects</a></li>
+                <li><a href="index.html#services">Services</a></li>
+                <li><a href="index.html#skills">Skills</a></li>
+                <li><a href="index.html#timeline">Experience</a></li>
+                <li><a href="index.html#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -41,24 +35,36 @@
         <section id="scroll-section">
             <div class="about">
                 <div class="about-title">
-                    <h1>Design work</h1>
-                    <p>I created a bunch of event concepts/designs during the 3+ years that I was working as a Project Director in a company organizing B2B events. I created all kinds of marketing materials from flyers and banners to event programs by using Adobe Creative Cloud. </p>
+                    <h1>Design</h1>
+                    <p>I've always been interested in arts. When I was in High School, I loved photography and I also developed my own photos in a darkroom. Back then I also learned more about Photoshop that I've now used for over 15 years. Some of my previous positions required daily use of Adobe Creative Cloud, especially when I was creating materials for event marketing campaigns. I created a bunch of event concepts/designs during the 3+ years that I was working as a Project Director in a B2B events company. I created all kinds of marketing materials from flyers and banners to event programs by using Adobe Creative Cloud. Here are some of the banners/flyers I personally like with a couple of infographics I've done in recent years. At the end, there's an example of a full event concept. So, just get scrolling...</p>
                 </div>
                 <div class="about-pages">
                     <div class="vertical">
-                        <img src="img/design/ils-pysty.jpg" alt="event banner design" />
+                        <img src="img/design/ils-pysty.jpg" alt="event banner design" data-tilt />
                     </div>
                     <div class="boxy">
-                        <img src="img/design/tunnel-pysty.jpg" alt="event banner design" />
+                        <img src="img/design/tunnel-pysty.jpg" alt="event banner design" data-tilt />
                     </div>
                     <div class="boxy">
-                        <img src="img/design/construction-pysty.jpg" alt="event banner design" />
+                        <img src="img/design/construction-pysty.jpg" alt="event banner design" data-tilt />
+                    </div>
+                    <div class="vertical">
+                        <img src="img/design/iam-pysty.jpg" alt="event banner design" data-tilt />
+                    </div>
+                    <div class="vertical">
+                        <img src="img/design/avsec-pysty.jpg" alt="event banner design" data-tilt />
                     </div>
                     <div class="boxy">
-                        <img src="img/design/e-air-pysty.jpg" alt="event banner design" />
+                        <img src="img/design/e-air-pysty.jpg" alt="event banner design" data-tilt />
                     </div>
                     <div class="boxy">
-                        <img src="img/design/car.jpg" alt="event banner design" />
+                        <img src="img/design/car.jpg" alt="event banner design" data-tilt />
+                    </div>
+                    <div class="vertical">
+                        <img src="img/design/nv-pysty.jpg" alt="event banner design" data-tilt />
+                    </div>
+                    <div class="vertical">
+                        <img src="img/design/danskebank-pysty.jpg" alt="event banner design" data-tilt />
                     </div>
                 </div>
             </div>
@@ -66,29 +72,62 @@
 
         <section id="horizontal-banners">
             <img src="img/design/glass-vaaka.jpg" alt="horizontal banner">
-            <img src="img/design/digico-vaaka.JPG" alt="horizontal banner">
             <img src="img/design/ils2-vaaka.JPG" alt="horizontal banner">
             <img src="img/design/sport-vaaka.JPG" alt="horizontal banner">
             <img src="img/design/avsec-vaaka.jpg" alt="horizontal banner">
             <img src="img/design/blockchain-vaaka.JPG" alt="horizontal banner">
             <img src="img/design/plastics-vaaka.JPG" alt="horizontal banner">
+            <img src="img/design/emotor-vaaka.JPG" alt="horizontal banner">
+            <img src="img/design/digico-vaaka.JPG" alt="horizontal banner">
         </section>
 
-        <section id="full-concepts">
-            <h2>Full design concepts</h2>
+        <section id="full-concepts" class="container design-container">
+            <h2>Full concepts</h2>
             <img src="img/design/ils-full-concept.jpg" alt="full event concept">
         </section>
-
     </main>
-
-    <footer>
-        <p class="copyright">Copyright &copy; Kalle Kekomaki 2020</p>
-    </footer>
+<!-- contact form and social media -->
+<footer>
+    <div class="container">
+        <div class="contact-box" id="contact">
+            <div class="left">
+                <img src="img/kalle-profile.jpg" alt="contact me" data-tilt>
+            </div>
+<!-- right side form -->
+            <div class="right">
+                <form action="mailto:kalle.kekomaki@gmail.com" method="POST" enctype="multipart/form-data" name="EmailForm">
+                    <h2>Contact me</h2>
+                    <h5>Name</h5>
+                    <input type="text" class="field" placeholder="your name">
+                    <h5>Email</h5>
+                    <input type="email" class="field" placeholder="your email">
+                    <h5>Phone</h5>
+                    <input type="text" class="field" placeholder="your phone number">
+                    <h5>Message</h5>
+                    <textarea class="field area" placeholder="tell me a secret"></textarea>
+                    <button class="btn" type="submit">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <section id="contact-links">
+        <div class="container">
+            <div class="social-media">
+                <a id="linkedin" href="http://www.linkedin.com/in/kalle-kekomaki" target="_blank"><i class="fab fa-linkedin fa-4x"></i></a>
+                <a id="github" href="https://github.com/KaleKemosabe" target="_blank"><i class="fab fa-github-square fa-4x"></i></a>
+                <a id="codewars" href="https://www.codewars.com/users/Kale%20Kemosabe" target="_blank"><i class="fas fa-window-close fa-4x"></i></a>
+            </div>
+        </div>
+    </section>
+    <p class="copyright">Copyright &copy; Kalle Kekomaki 2020</p>
+</footer>
 
 <!-- scrollmagic -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.min.js" integrity="sha512-RvUydNGlqYJapy0t4AH8hDv/It+zKsv4wOQGb+iOnEfa6NnF2fzjXgRy+FDjSpMfC3sjokNUzsfYZaZ8QAwIxg==" crossorigin="anonymous"></script>
 <!-- scrollmagic end -->
     <script src="gallery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="tilt.js"></script>
 </body>
 </html>
