--- a/index.html
+++ b/index.html
@@ -27,14 +27,7 @@
 <!-- mobile menu - closing -->
             <!-- <a onclick="mobileMenu()" href="#" class="icon"><i class="fas fa-times fa-2x"></i></a> -->
             <ul>
-                <!-- <li><a href="#about">About</a></li> -->
-                <li><a href="#services">Services</a>
-                    <!-- <ul>
-                        <li><a href="#">Design</a></li>
-                        <li><a href="#">Development</a></li>
-                        <li><a href="#">Content</a></li>
-                    </ul> -->
-                </li>
+                <li><a href="#services">Services</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#timeline">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -50,37 +43,31 @@
                 <h2 class="hero">I'm a Web Designer & Frontend Developer from Helsinki, Finland.</h2>
             </div>
             <div class="container hero-container">
-                <p class="about-text">Welcome to my portfolio website! I'm currently studying in Helsinki Business College to become a Full-stack Developer with focus on React & Node. Before I got into coding, I was living around the world and working mostly in different project management and customer service positions.
+                <p class="about-text">Welcome to my portfolio website! I'm currently studying in Helsinki Business College to become a Full-stack Developer with focus on React & Node (I also got an MBA specializing in digital business solutions). Before I got into coding, I was living around the world and working mostly in different project management and customer service positions.
                 </p>
                 <p class="cv-text">If you want to keep your visit brief, here's my resume:</p>
                 <a class="btn" href="assets/kalle-kekomaki-cv2020.pdf" title="" download>Download CV</a>
             </div>
         </section>
-<!-- about me section -->
-        <!-- <section id="about">
-            <div class="container">
-                <h2>About me</h2>
-                <p>Occasionally, I wear a mustache. When I write code, I wear glasses.</p><p>Long story short: I'm a developer. designer, project manager. nature lover. annoyingly sarcastic individual. Tools and technologies I'm familiar with include HTML, CSS, Sass, Bootstrap, JavaScript, TypeScript, React & Redux, Node & Express, Adobe Photoshop, InDesign, Illustrator, Xd, Animate, Figma, Pipedrive, Trello, Miro</p>
-            </div>
-        </section> -->
 <!-- back to top button -->
         <a href="#" class="to-top"><i class="fas fa-chevron-circle-up fa-4x"></i></a>
 <!-- services section cards -->
         <section id="services">
             <div class="container">
                 <h2>Services</h2>
+                <h4>This is what I do</h4>
                 <div class="cards">
-                    <div class="card" data-tilt>
-                        <img class="card-icon" src="img/mustache.png" alt="design">
-                        <h3>Design</h3>
-                        <p>In the past, I was mainly creating materials for event marketing campaigns. Lately, I've been focusing mainly on web design.</p>
-                        <a href="gallery.html">Learn more</a>
-                    </div>
                     <div class="card" data-tilt>
                         <img class="card-icon" src="img/glasses.png" alt="development">
                         <h3>Development</h3>
-                        <p>I have a very customer-focused approach to web development and I understand the importance of good UI/UX design.</p>
-                        <a href="#">Learn more <i>(Coming soon...)</i></a>
+                        <p>I have a very customer-focused approach to web development and I understand the importance of good design. I started doing UX studies online in 2016 at Interaction Design Foundation. One thing led to another and I ended up doing my MBA on digital business solutions and continued to study Full Stack Web Development straight after. I'm still on that path and I'm so excited to take on new projects and learn about new technologies. Right now, my focus is in JavaScript & React and I'm also getting familiar with TypeScript.</p>
+                        <a href="#projects">Learn more in the projects section</a>
+                    </div>
+                    <div class="card" data-tilt>
+                        <img class="card-icon" src="img/stache.png" alt="design">
+                        <h3>Design</h3>
+                        <p>I've always been interested in arts. When I was in High School, I loved photography and I also developed my own photos in a darkroom. Back then I also learned more about Photoshop that I've now used for over 15 years. Some of my previous positions required daily use of Adobe Creative Cloud, especially when I was creating materials for event marketing campaigns. <a href="gallery.html">You can check out some of the materials here</a> (sorry, no mobile support for now). Lately, I've been focusing mainly on web design and I'm trying to learn more about best design practices on a daily basis.</p>
+                        <a href="#projects">Learn more in the projects section</a>
                     </div>
                 </div>
             </div>
@@ -103,13 +90,13 @@
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                            <h5>JavaScript</h5>
+                            <h5>JavaScript & TypeScript</h5>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                             <h5>React</h5>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                             <h5>Node & Express</h5>
                             <div class="progress">
@@ -150,7 +137,7 @@
 <!-- experience timeline -->
         <div class="container">
             <h2 class="timeline-title">Work Experience</h2>
-            <h4>Full details in <a class="timeline-link" href="https://www.linkedin.com/in/kalle-kekomaki">LinkedIn</a></h4>
+            <h4>Full details in <a class="timeline-link" href="https://www.linkedin.com/in/kalle-kekomaki" target="_blank">LinkedIn</a></h4>
         </div>
         <section id="timeline">
             <ul>
@@ -232,7 +219,7 @@
         <div class="container">
             <div class="contact-box" id="contact">
                 <div class="left">
-                    <img src="img/kalle-profile.jpg" alt="contact me">
+                    <img src="img/kalle-profile.jpg" alt="contact me" data-tilt>
                 </div>
     <!-- right side form -->
                 <div class="right">
@@ -254,9 +241,9 @@
         <section id="contact-links">
             <div class="container">
                 <div class="social-media">
-                    <a id="linkedin" href="http://www.linkedin.com/in/kalle-kekomaki"><i class="fab fa-linkedin fa-4x"></i></a>
-                    <a id="github" href="https://github.com/KaleKemosabe"><i class="fab fa-github-square fa-4x"></i></a>
-                    <a id="codewars" href="https://www.codewars.com/users/Kale%20Kemosabe"><i class="fas fa-window-close fa-4x"></i></a>
+                    <a id="linkedin" href="http://www.linkedin.com/in/kalle-kekomaki" target="_blank"><i class="fab fa-linkedin fa-4x"></i></a>
+                    <a id="github" href="https://github.com/KaleKemosabe" target="_blank"><i class="fab fa-github-square fa-4x"></i></a>
+                    <a id="codewars" href="https://www.codewars.com/users/Kale%20Kemosabe" target="_blank"><i class="fas fa-window-close fa-4x"></i></a>
                 </div>
             </div>
         </section>
