--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
         <nav>
             <a href="#" id="logo"><img src="img/logo-noborder.png" alt="logo"></a>
 <!-- mobile menu - hamburger -->
-            <a onclick="mobileMenu()" href="#" class="icon"><i class="fas fa-bars fa-2x"></i></a>
-<!-- mobile menu - closing -->
-            <!-- <a onclick="mobileMenu()" href="#" class="icon"><i class="fas fa-times fa-2x"></i></a> -->
+            <a onclick="mobileMenu()" href="#/" class="icon"><i class="fas fa-bars fa-2x"></i></a>
             <ul>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#timeline">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
+<!-- mobile menu - closing -->
+                <a onclick="mobileMenu()" href="#/" class="close-icon"><i class="fas fa-times fa-2x"></i></a>
             </ul>
         </nav>
     </header>
